--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASS }}
       - name: Build Docker Image
-        run: docker build -t frontend-test .
+        run: docker build -t frontend-test frontend/.
       - name: Publish image to docker hub
         run: docker push frontend-test/:mnist-app:latest 
 
