--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,9 +14,9 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASS }}
       - name: Build Docker Image
-        run: docker build -t frontend-test/mnist-app frontend/.
-      - name: Publish image to docker hub
-        run: docker push frontend-test/mnist-app:latest 
+        run: docker build -t mnist-app frontend/.
+      - name: Publish image to Docker Hub
+        run: docker push mnist-app:latest
 
   deploy: 
     needs: build
