--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Build Docker Image
         run: docker build -t mnist-app frontend/.
       - name: Publish image to Docker Hub
-        run: docker push mnist-app
+        run: docker push ranaabdulrehman30/mnist-app:latest
 
   deploy: 
     needs: build
